force-app/main/default/objects/Payment_Split__c/Payment_Split__c.object-meta.xml
<CustomObject>
    <label>Log Payment</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Log Payment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>