force-app/main/default/objects/Payment_Split__c/fields/Acquirer_Name__c.field-meta.xml
<CustomField>
    <fullName>Acquirer_Name__c</fullName>
    <label>Acquirer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>