force-app/main/default/objects/Payment_Split__c/fields/ApprovalCode__c.field-meta.xml
<CustomField>
    <fullName>ApprovalCode__c</fullName>
    <label>ApprovalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>