force-app/main/default/objects/Payment_Split__c/fields/Error_On_Submission__c.field-meta.xml
<CustomField>
    <fullName>Error_On_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error On Submission</label>
    <type>Checkbox</type>
</CustomField>