force-app/main/default/objects/Payment_Split__c/fields/Hardware_Id__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Id__c</fullName>
    <formula>PineLabs_Machine_Info__r.Device_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware Id</label>
    <type>Text</type>
</CustomField>