force-app/main/default/objects/Payment_Split__c/fields/Internal_Cash_Split__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cash_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Cash Split</label>
    <type>Checkbox</type>
</CustomField>