force-app/main/default/objects/Payment_Split__c/fields/Is_Cancel_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancel_Transaction__c</fullName>
    <formula>AND(
    NOW() - CreatedDate &gt;= (3 / 1440),  /* 3 minutes in days */
    ISPICKVAL(Status__c, &quot;Initiated&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cancel Transaction?</label>
    <type>Checkbox</type>
</CustomField>