force-app/main/default/objects/Payment_Split__c/fields/IsPayment_Status_Checked__c.field-meta.xml
<CustomField>
    <fullName>IsPayment_Status_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPayment Status Checked</label>
    <type>Checkbox</type>
</CustomField>