force-app/main/default/objects/Payment_Split__c/fields/Pine_Labs_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Pine_Labs_Response_Status__c</fullName>
    <label>Pine Labs Response Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>