force-app/main/default/objects/Payment_Split__c/fields/PineLabs_Initiated__c.field-meta.xml
<CustomField>
    <fullName>PineLabs_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PineLabs Initiated?</label>
    <type>Checkbox</type>
</CustomField>