force-app/main/default/objects/Payment_Split__c/fields/PineLabs_Machine_Info__c.field-meta.xml
<CustomField>
    <fullName>PineLabs_Machine_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PineLabs Machine Info</label>
    <referenceTo>PineLabs_Machine_Info__c</referenceTo>
    <relationshipLabel>Log Payments</relationshipLabel>
    <relationshipName>Log_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>