force-app/main/default/objects/Payment_Split__c/fields/Plutus_Txn_ref_Id__c.field-meta.xml
<CustomField>
    <fullName>Plutus_Txn_ref_Id__c</fullName>
    <label>Cloud Ref ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>