force-app/main/default/objects/Payment_Split__c/fields/Retrieval_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Reference_Number__c</fullName>
    <label>RRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>