force-app/main/default/objects/Payment_Split__c/fields/Transaction_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Log_Id__c</fullName>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>