force-app/main/default/objects/Payment_Split__c/fields/Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Time__c</fullName>
    <label>Transaction Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>