force-app/main/default/objects/Payment_Split__c/listViews/Today_s_Log_Payments.listView-meta.xml
<ListView>
    <fullName>Today_s_Log_Payments</fullName>
    <columns>NAME</columns>
    <columns>ApprovalCode__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>Pay_Amount__c</columns>
    <columns>Plutus_Txn_ref_Id__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transaction_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s  Log Payments</label>
</ListView>